2003-08-03  Dominique Devriese  <devriese@kde.org>

	* give Transformation::apply better semantics

2003-07-27  Dominique Devriese  <devriese@kde.org>

	* add a warning to configure.in.bot about how Boost.Python 1.30
	together with GCC 3.2+ is a bad combination, along with a patch.

	* add documentation about attaching text labels and locuses to the
	index.docbook file

2003-07-23  Dominique Devriese  <devriese@kde.org>

	* add a nifty python scripting example that shows the graph of a
	sine curve, but can in fact be used to show any function's graph
	you would come up with.  It uses python scripting and the locus
	facility in a clever way to do this.  In fact, I stole the idea
	from something I saw Hilaire Fernandes do with the Dr.Genius guile
	scripting on a presentation at FOSDEM.  Kig - of course ;) - does
	it way cooler.. :)

	* add support for using the python math package in Kig python
	scripts, by importing it from PythonScripter's ctor, and by making
	Kig load its part library with RTLD_GLOBAL, to eliminate a problem
	which caused python to not be able to load its math dll..

2003-07-20  Dominique Devriese  <devriese@kde.org>

	* add support for attached text labels.

2003-07-17  Dominique Devriese  <devriese@kde.org>

	* fix the "conversion from const char* to char*" problem in
	python_scripter.cc.  This introduces a small, harmless memory leak
	because of how the python libs work..

2003-07-16  Dominique Devriese  <devriese@kde.org>

	* add documentation about installing the python dev libs to
	configure.in.bot

	* adapt some infrastructure regarding text labels to be able to
	work with labels that get their location from an invisible Point
	object.  This will ease the adding of support for attached text
	labels..

2003-07-12  Dominique Devriese  <devriese@kde.org>

	* prevent a crash when kig cannot find its library.  It now just
	complains and exits properly.

2003-07-03  Dominique Devriese  <devriese@kde.org>
